--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Ruby Latte theme for VS Code",
     "version": "1.0.0",
     "repository": "https://github.com/limpbiskuit/ruby-latte",
+    "publisher": "limpbiskuit",
     "engines": {
         "vscode": "^1.71.0"
     },
