--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ruby-latte",
-    "displayName": "ruby-latte",
+    "displayName": "Ruby Latte",
     "description": "Ruby Latte theme for VS Code",
     "version": "1.0.0",
     "repository": "https://github.com/limpbiskuit/ruby-latte",
